crates/jni-macros/tests/ui/bind_java_type/fail/visibility_private_method.stderr
error[E0624]: method `private_method` is private
  --> tests/ui/bind_java_type/fail/visibility_private_method.rs:18:31
   |
 6 | /     bind_java_type! {
 7 | |         rust_type = TestClass,
 8 | |         java_type = "com.example.TestClass",
 9 | |         methods {
...  |
13 | |     }
   | |_____- private method defined here
...
18 |       let _ = inner::TestClass::private_method;
   |                                 ^^^^^^^^^^^^^^ private method
